Fragment and search view implemented

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,161 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.MainActivity">
+    tools:context=".View.Main_Fragment">
 
-    <RelativeLayout
-        android:id="@+id/welcomeView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appBarLayout"
-            android:layout_width="0dp"
-            android:layout_height="64dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true">
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="?attr/colorPrimary"
-                android:minHeight="?attr/actionBarSize"
-                android:theme="?attr/actionBarTheme" />
-
-        </com.google.android.material.appbar.AppBarLayout>
-
-        <ImageView
-            android:layout_width="65dp"
-            android:layout_height="65dp"
-            android:layout_centerHorizontal="true"
-            android:elevation="4dp"
-            android:padding="5dp"
-            android:src="@drawable/xseries_icon" />
-
-        <ImageView
-            android:id="@+id/mainAccount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="10dp"
-            android:elevation="4dp"
-            android:padding="10dp"
-            android:src="@drawable/ic_round_person_24" />
-
-        <ImageView
-            android:id="@+id/navigationMain"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:elevation="4dp"
-            android:padding="10dp"
-            android:src="@drawable/ic_round_view_headline_24" />
-
-        <TextView
-            android:id="@+id/welcome"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/appBarLayout"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="30dp"
-            android:elevation="1dp"
-            android:fontFamily="sans-serif-black"
-            android:text="Welcome."
-            android:textColor="@color/white"
-            android:textSize="45sp" />
-
-        <TextView
-            android:id="@+id/WelcomeText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/welcome"
-            android:layout_marginStart="20dp"
-            android:elevation="1dp"
-            android:fontFamily="sans-serif-medium"
-            android:text="Millions of Movies, Tv \nshows and people to \ndiscover. Explore now."
-            android:textColor="@color/white"
-            android:textSize="30sp" />
-
-
-        <EditText
-            android:id="@+id/search"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_below="@id/WelcomeText"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/search_box"
-            android:elevation="1dp"
-            android:fontFamily="sans-serif"
-            android:hint="Search...."
-            android:imeOptions="actionGo"
-            android:inputType="text"
-            android:paddingStart="19dp"
-            android:paddingRight="100dp"
-            android:textColorHint="#757575"
-            android:textSize="16sp" />
-
-        <Button
-            android:id="@+id/searchButtonMain"
-            android:layout_width="95dp"
-            android:layout_height="46dp"
-            android:layout_below="@id/WelcomeText"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            android:background="@drawable/bgposter"
-            android:fontFamily="sans-serif-medium"
-            android:text="Search"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="16sp" />
-
-        <com.smarteist.autoimageslider.SliderView
-            android:id="@+id/slider"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_below="@id/appBarLayout"
-            android:layout_centerHorizontal="true"
-            android:foreground="#C6032C4A"
-            app:sliderAnimationDuration="1000"
-            app:sliderAutoCycleDirection="back_and_forth"
-            app:sliderIndicatorAnimationDuration="600"
-            app:sliderIndicatorEnabled="true"
-            app:sliderIndicatorGravity="center_horizontal|bottom"
-            app:sliderIndicatorMargin="15dp"
-            app:sliderIndicatorOrientation="horizontal"
-            app:sliderIndicatorPadding="3dp"
-            app:sliderIndicatorRadius="2dp"
-            app:sliderIndicatorSelectedColor="#5A5A5A"
-            app:sliderIndicatorUnselectedColor="#FFF"
-            app:sliderScrollTimeInSec="1"
-            app:sliderStartAutoCycle="true" />
-
-
-    </RelativeLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/welcomeView" />
+        android:text="@string/hello_blank_fragment" />
 
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/welcomeView"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_margin="50dp" />
-
-</RelativeLayout>
+</FrameLayout>
