--- a/app/src/main/res/layout/fragment_collection.xml
+++ b/app/src/main/res/layout/fragment_collection.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CollectionFragment">
+    tools:context=".BottomNavigationTab.CollectionFragment"
+    android:background="@color/page_background">
 
     <RelativeLayout
         android:id="@+id/buttonTab"
@@ -16,15 +17,19 @@
             android:id="@+id/button4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Shows"/>
+            android:text="Shows"
+            android:textColor="@color/selected"
+            android:background="@color/transparent"/>
 
         <Button
             android:id="@+id/button5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_toRightOf="@id/button4"
-            android:text="Movies"/>
+            android:layout_toEndOf="@id/button4"
+            android:text="Movies"
+            android:textColor="@color/selected"
+            android:background="@color/transparent"/>
     </RelativeLayout>
 
 
