--- a/app/src/main/res/layout/fragment_movie_progress.xml
+++ b/app/src/main/res/layout/fragment_movie_progress.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#665"
-    tools:context=".ShowsTab.ShowFragment">
+    tools:context=".BottomNavigationTab.CollectionTab.ShowsTab.ShowFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
